# MPM_Snow_Sim2D

./: .gitignore  CMakeLists.txt  README.md
src/: Grid.cpp  Parameters.h  Particles.cpp  Particles.h  helpers.h  main.cpp
src/cpu/: CPUSolver.h  Grid.cpp  Grid.h  Particles.cpp  Particles.h
src/gpu/: GPUSolver.cpp  GPUSolver.h
src/gpu/shaders/: common.glsl  g2p.glsl  grid_update.glsl  p2g.glsl  precompute.glsl  reset.glsl
src/gpu/shaders/2d/: g2p.glsl  p2g.glsl
src/gpu/shaders/3d/: common.glsl  g2p.glsl  grid_update.glsl  p2g.glsl  reset.glsl
src/shared/: Log.h  Parameters.h  Shapes.h  helpers.h
